--- a/src/main/resources/templates/main.mustache
+++ b/src/main/resources/templates/main.mustache
@@ -1,7 +1,23 @@
 <html>
 <body>
-<div>
-    {{some}}
-</div>
+    <div>
+        <form method="post">
+            <input type="text" name="text" placeholder="Enter a message" />
+            <input type="text" name="tag" placeholder="Tag">
+            <button type="submit">Add</button>
+        </form>
+    </div>
+    <div>Message list</div>
+    <form method="post" action="filter">
+        <input type="text" name="filter">
+        <button type="submit">Find</button>
+    </form>
+    {{#messages}}
+    <div>
+        <b>{{id}}</b>
+        <span>{{text}}</span>
+        <i>{{tag}}</i>
+    </div>
+    {{/messages}}
 </body>
 </html>
